--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  asclepius-bot:
+  asclepiusbot:
     build: .
     restart: always
     environment:
@@ -14,8 +14,8 @@ services:
       - 80:80
       - 443:443
     links:
-      - covid19
+      - asclepiusbot
     environment:
-      DOMAINS: "entity-covid19.minsky.cc -> http://asclepius-bot:8080"
+      DOMAINS: "entity-covid19.minsky.cc -> http://asclepiusbot:8080"
       STAGE: "production"
       #FORCE_RENEW: "true"
